--- a/Bayser-Portal/bayser diseño 2/estilolanding.css
+++ b/Bayser-Portal/bayser diseño 2/estilolanding.css
@@ -37,7 +37,7 @@ body{
     /* min-height: 100vh; */
     /* background: #031321; */
     font-family: consolas;
-    
+    background-color: #333333;
 }    
 
 .boton{
@@ -51,6 +51,7 @@ body{
     font-size: 24px;
     overflow: hidden;
     transition: 0.2s;
+    background-color: #333333;
 }
 
 /* .boton:hover{
@@ -172,6 +173,7 @@ header nav ul li a{
     font-family: 'Baloo Thambi 2', cursive;
     position: relative;
     background: darkgreen(#2196f3,15);
+    text-transform: uppercase;
 }
 
 header nav ul li a::before{
