--- a/Bayser-Portal/bayser diseño 2/estilolanding.css
+++ b/Bayser-Portal/bayser diseño 2/estilolanding.css
@@ -71,7 +71,7 @@ a span:nth-child(1){
     left: -100%;
     width: 100%;
     height: 2px;
-    background: linear-gradient(90deg,#333333,#2196f3);
+    background: linear-gradient(90deg,transparent,#2196f3);
 }
 
 a:hover span:nth-child(1){
@@ -84,7 +84,7 @@ a span:nth-child(3){
     right: -100%;
     width: 100%;
     height: 2px;
-    background: linear-gradient(270deg,#333333,#2196f3);
+    background: linear-gradient(270deg,transparent,#2196f3);
 }
 
 a:hover span:nth-child(3){
@@ -98,7 +98,7 @@ a span:nth-child(2){
     right: 0;
     width: 2px;
     height: 100%;
-    background: linear-gradient(180deg,#333333,#2196f3);
+    background: linear-gradient(180deg,transparent,#2196f3);
 }
 
 a:hover span:nth-child(2){
