--- a/Bayser-Portal/bayser diseño 2/estilolanding.css
+++ b/Bayser-Portal/bayser diseño 2/estilolanding.css
@@ -51,7 +51,7 @@ body{
     font-size: 24px;
     overflow: hidden;
     transition: 0.2s;
-    background-color: #333333;
+    background-color: rgba(20, 19, 19, 0.68);
     
 }
 
