--- a/Bayser-Portal/bayser diseño 2/estilolanding.css
+++ b/Bayser-Portal/bayser diseño 2/estilolanding.css
@@ -39,7 +39,7 @@ body{
     font-family: consolas;
     
 }    
-
+/*Este es el rectangulo del boton*/
 .boton{
     position: relative;
     display: inline-block;
@@ -52,7 +52,6 @@ body{
     overflow: hidden;
     transition: 0.2s;
     background-color: rgba(20, 19, 19, 0.68);
-    z-index:2;
     
 }
 
