--- a/Bayser-Portal/bayser diseño 2/estilolanding.css
+++ b/Bayser-Portal/bayser diseño 2/estilolanding.css
@@ -37,6 +37,7 @@ body{
     /* min-height: 100vh; */
     /* background: #031321; */
     font-family: consolas;
+    z-index: 3;
     
 }    
 /*Este es el rectangulo del boton*/
@@ -52,7 +53,7 @@ body{
     overflow: hidden;
     transition: 0.2s;
     background-color: rgba(20, 19, 19, 0.68);
-    
+    z-index: 3;
 }
 
 /* .boton:hover{
