--- a/Bayser-Portal/bayser diseño 2/estilolanding.css
+++ b/Bayser-Portal/bayser diseño 2/estilolanding.css
@@ -234,7 +234,7 @@ img#logo{
 
 footer {
     align-self: flex-end;
-    background-color: #333333;
+    background-color: #252424c2;
     color: #fff;
     font-size: 50px;
     font-weight: bold;
