--- a/Bayser-Portal/bayser diseño 2/estilolanding.css
+++ b/Bayser-Portal/bayser diseño 2/estilolanding.css
@@ -242,6 +242,7 @@ img#logo{
     color: whitesmoke;
     font-family: 'Baloo Thambi 2', Arial, Helvetica, sans-serif;
     font-weight:bold;
+    font-size:  24px;
 
 
 }
