--- a/Bayser-Portal/bayser diseño 2/estilolanding.css
+++ b/Bayser-Portal/bayser diseño 2/estilolanding.css
@@ -267,10 +267,10 @@ img#logo{
 
 
 }
-
+/*0076c1-005996-003a68*/
 /*Footer Nando*/footer {
     align-self: flex-end;
-    background-color: #333333;
+    background-color: #3e3e41;
     color: #fff;
     font-size: 50px;
     font-weight: bold;
