--- a/Bayser-Portal/plantilla/plantilla.css
+++ b/Bayser-Portal/plantilla/plantilla.css
@@ -17,7 +17,7 @@ body{
 
     
 header{
-    background-image: url(img/mainbayser5.jpg);
+    background-color: gray;
     height: 100vh;
     background-size: cover;
     background-position: center;
