--- a/Bayser-Portal/plantilla/fonts/style.css
+++ b/Bayser-Portal/plantilla/fonts/style.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'icomoon';
-  src:  url('fonts/icomoon.eot?n1h5iw');
-  src:  url('fonts/icomoon.eot?n1h5iw#iefix') format('embedded-opentype'),
-    url('fonts/icomoon.ttf?n1h5iw') format('truetype'),
-    url('fonts/icomoon.woff?n1h5iw') format('woff'),
-    url('fonts/icomoon.svg?n1h5iw#icomoon') format('svg');
+  src:  url('icomoon.eot?n1h5iw');
+  src:  url('icomoon.eot?n1h5iw#iefix') format('embedded-opentype'),
+    url('icomoon.ttf?n1h5iw') format('truetype'),
+    url('icomoon.woff?n1h5iw') format('woff'),
+    url('icomoon.svg?n1h5iw#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: block;
