--- a/Bayser-Portal/plantilla/plantilla.css
+++ b/Bayser-Portal/plantilla/plantilla.css
@@ -143,48 +143,64 @@ footer {
     padding: 0;
     width: 100%;
     text-transform: uppercase;
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
   }
 
-.mail {
+.redes-sociales{
+    width: 100%;
+}
+.icono-mail {
     list-style: none;
     text-decoration: none;
     color: white;
 }
 
-.facebook {
+.icono-mail:hover{
+    list-style: none;
+    text-decoration: none;
+    color: red;
+}
+
+.icon-email{
+    position: relative;
+ }
+
+.icono-facebook{
     list-style: none;
     text-decoration: none;
     color: white;
 }
 
-.whatsapp {
+.icon-facebook{
+    position: relative;
+}
+
+.icono-whatsapp {
     list-style: none;
     text-decoration: none;
     color: white;
 }
 
-.home{
+.icon-whatsapp{
+    position: relative;
+}
+
+.icono-celular{
     list-style: none;
     text-decoration: none;
     color: white; 
 }
 
- .icon-mail4{
+.icon-phone{
     position: relative;
- }
- 
- .icon-facebook2{
-    position: relative;
-}
-
-.icon-whatsapp{
-    position: relative;
-    font-size: 15px;
 }
 
 .container{
     background: green;
     font-size: 15px;
+    width: 100%;
     display: flex;
     flex-direction: row;
 }
@@ -207,8 +223,24 @@ footer {
 }
 
 .pregunta{
-    background: green;
+    width: 100%;
+    height: 120px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
+
+.pregunta-span{
+    background: #00ff00;
+    /*transform: rotateX(45deg);*/
+    transition: 1s;
+    transform: rotate(-10deg);
+    width: 400px;
+    font-size: 40px;
+    border-radius: 3%;
+    box-shadow: 0px 5px 3px #333333;
+}
+
 
 .mensaje{
     display: flex;
@@ -227,7 +259,9 @@ footer {
     color: white;
     font-size:  25px;
     top: 5px;
-    left: center;
+   /* left: center;*/
+   justify-content: center;
+   width: 100%;
     }
     
     .mensaje2{
