--- a/Bayser-Portal/plantilla/plantilla.css
+++ b/Bayser-Portal/plantilla/plantilla.css
@@ -167,7 +167,7 @@ footer {
 }
 
 .enlace-mail:hover>.span-email{
-   width: 230px;
+   width: 233px;
     transition: .3s;
     list-style: none;
     text-decoration: none;
@@ -179,7 +179,7 @@ footer {
 
 .span-email{
     font-size: 20px;
-    width: 230px; 
+    width: 233px; 
     display: none;
     position: absolute;
     padding: 0px 0px 0px 2px; 
@@ -295,33 +295,76 @@ footer {
 }
 
 .container{
-    background: green;
+   /* background: green;*/
     font-size: 15px;
     width: 100%;
     display: flex;
     flex-direction: row;
+    box-shadow: 0px 2px 3px #333333;
 }
 
 .ubicacion{
-    background: red;
+   /* background: red;*/
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    height: 100px;
 }
 
-.icon-time{
-    position: relative;
-    font-size: 15px;
+.icono-ubicacion{
+    display: flex;
+    width: 100%;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+.informacion-ubicacion{
+    display: inline;
+}
+
+.icon-location{
+    font-size: 40px;
+}
+
+.icono-horario{
+    display: flex;
+    width: 100%;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
 }
 
 .horario{
-    background: yellow;
+   /* background: yellow;*/
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.icon-time{
+    font-size: 40px;
+}
+
+.informacion-horario{
+    display: inline;
 }
 
 .socios{
-    background: blue;
+   /* background: blue;*/
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.icono-socio-ohaus{
+    width: 50%;
+    height: 50px;
 }
 
 .pregunta{
     width: 100%;
-    height: 120px;
+    height: 130px;
     display: flex;
     align-items: center;
     justify-content: center;
