--- a/Bayser-Portal/plantilla/plantilla.css
+++ b/Bayser-Portal/plantilla/plantilla.css
@@ -363,7 +363,7 @@ footer {
     width: 400px;
     font-size: 40px;
     border-radius: 3%;
-    box-shadow: 0px 5px 3px #333333;
+    box-shadow: 0px 5px 3px #2196f3;
 }
 
 .mensaje{
