--- a/Bayser-Portal/plantilla/plantilla.css
+++ b/Bayser-Portal/plantilla/plantilla.css
@@ -15,7 +15,7 @@ body{
 
     
 header{
-    background-color:white;
+    background-color:transparent;
     height: 100vh;
     background-size: cover;
     background-position: center;
@@ -288,7 +288,7 @@ footer {
     width: 100%;
     display: flex;
     flex-direction: row;
-    box-shadow: 0px 2px 3px #333333;
+    box-shadow: 0px 2px 3px #ffff;
 }
 
 .ubicacion{
@@ -363,7 +363,7 @@ footer {
     width: 400px;
     font-size: 40px;
     border-radius: 3%;
-    box-shadow: 0px 5px 3px #2196f3;
+    box-shadow: 0px 5px 3px #333333;
 }
 
 .mensaje{
