--- a/Bayser-Portal/plantilla/plantilla.css
+++ b/Bayser-Portal/plantilla/plantilla.css
@@ -16,7 +16,7 @@ body{
     
 header{
     background-color:transparent;
-    height: 100vh;
+    height: 59.6167px;
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -119,6 +119,140 @@ li:hover>ul{
     top: 3px;
     margin-bottom: 5px;
 }
+
+/*SLIDER*/
+
+
+.contenedor{
+	width: 100%;
+    position: relative;
+    height:  450px;
+
+	
+}
+.contenedor .slider-contenedor  ol{
+	list-style: none;
+}
+ul,ol{
+	list-style: none;
+}
+
+.slider-contenedor li ul{
+	width: 100%;
+	height: 400px;
+	border-style: groove;
+}
+
+.slider-contenedor li{
+	overflow: hidden;
+}
+
+.slider-contenedor li img{
+	position: relative;
+	width: 100%;
+	height: 450px;
+	
+	left: 0;
+	top: 0;
+}
+
+.slider-contenedor section{
+	position: absolute;
+	left: 30%;
+	height: 50%;
+	width: 40%;
+	top:430px ;
+	
+	justify-content: center;
+	align-items: center;
+	text-align: center;
+}
+
+.slider-contenedor  .slider-informacion{
+	position: absolute;
+	width: 100%;
+	height:10000px;
+	top:  0;
+	left: 0;
+	padding: 15px 50px;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	text-align: center;
+	color: #fff;
+	z-index: 1;
+
+}
+
+.slider-contenedor section h1{
+	font-size: 20px;
+	text-align: justify;
+}
+
+.slider-contenedor section p{
+   position: absolute;	
+	font-size: 15px;
+	text-align: justify;
+	
+}
+
+.pagination{
+	position: absolute;
+	top: 90%;
+	width: 100%;
+
+	display: flex;
+	justify-content: center;
+}
+
+.pagination li{
+	font-size: 20px;
+	margin: 2px 5px;
+     color: gray;
+	cursor: pointer;
+}
+
+.left, .right{
+	position: absolute;
+	top: 0;
+	height: 100%;
+
+	display: flex;
+	align-items: center;
+
+	color: #333333;
+	font-size: 35px;
+	cursor: pointer;
+	z-index: 2;
+}
+
+.left{
+	left: 10px;
+}
+
+.right{
+	right: 10px;
+}
+
+
+
+
+
+/*CUERPO*/
+
+
+
+
+.informacion{
+    width: 100%;
+    height: 450px;
+    background-color: rgb(16, 117, 189);
+}
+
+
+
+
 
 /*455961-30383f*/
 footer {
