--- a/Bayser-Portal/bayser diseño 2/estilolanding.css
+++ b/Bayser-Portal/bayser diseño 2/estilolanding.css
@@ -267,209 +267,289 @@ img#logo{
 
 
 }
-/*0076c1-005996-003a68*/
-/*Footer Nando*/footer {
+footer {
+    position: relative;
     align-self: flex-end;
-    background-color: #3e3e41;
+    background-color: #333333;
     color: #fff;
     font-size: 50px;
     font-weight: bold;
     text-align: center;
-    padding: 1em;
+    padding: 0;
     width: 100%;
+    text-transform: uppercase;
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
   }
-.mail {
+
+.redes-sociales{
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+}
+
+.enlace-mail {
+    display: flex;
+    flex-wrap: wrap;
+    text-decoration: none;
+    list-style: none;
+    color: white;
+    position: relative;
+    padding: 0px 10px;
+}
+
+.enlace-mail:hover>.span-email{
+   width: 233px;
+    transition: .3s;
     list-style: none;
     text-decoration: none;
     color: white;
+    display: flex;
+    align-items: center;
+    position: relative;
 }
-.facebook {
+
+.span-email{
+    font-size: 20px;
+    width: 233px; 
+    display: none;
+    position: absolute;
+    padding: 0px 0px 0px 2px; 
+    color: white;
+}
+
+.icon-email{
+    position: relative;
+ }
+
+
+
+.enlace-facebook{
+    display: flex;
+    flex-wrap: wrap;
     list-style: none;
     text-decoration: none;
     color: white;
+    padding: 0px 10px;
+    position: relative;
 }
-.whatsapp {
+
+.enlace-facebook:hover>.span-facebook{
+    width: 180px;
+     transition: .3s;
+     list-style: none;
+     text-decoration: none;
+     color: white;
+     display: flex;
+     align-items: center;
+     position: relative;
+ }
+
+ .span-facebook{
+    font-size: 20px;
+    width: 180px; 
+    display: none;
+    position: absolute;
+    padding: 0px 0px 0px 2px;
+    color: white;
+}
+
+.icon-facebook{
+    position: relative;
+}
+
+.enlace-whatsapp {
+    display: flex;
+    flex-wrap: wrap;
     list-style: none;
     text-decoration: none;
     color: white;
+    padding: 0px 10px;
+    position: relative;
 }
-.home{
+
+.enlace-whatsapp:hover>.span-whatsapp {
+    width: 180px;
+    transition: .3s;
+    list-style: none;
+    text-decoration: none;
+    color: white;
+    display: flex;
+    align-items: center;
+    position: relative;
+}
+
+.span-whatsapp{
+    font-size: 20px;
+    width: 180px; 
+    display: none;
+    position: absolute;
+    padding: 0px 0px 0px 2px;
+    color: white;
+}
+
+.icon-whatsapp{
+    position: relative;
+}
+
+.enlace-celular{
+    display: flex;
+    flex-wrap: wrap;
     list-style: none;
     text-decoration: none;
     color: white; 
-}
- .icon-mail4{
-    position: relative;
- }
- 
- .icon-facebook2{
+    padding: 0px 10px;
     position: relative;
 }
-.icon-whatsapp{
+
+.enlace-celular:hover>.span-celular {
+    width: 180px;
+    transition: .3s;
+    list-style: none;
+    text-decoration: none;
+    color: white;
+    display: flex;
+    align-items: center;
     position: relative;
+}
+
+.span-celular{
+    font-size: 20px;
+    width: 180px; 
+    display: none;
+    position: absolute;
+    padding: 0px 0px 0px 2px;
+    color: white;
+}
+
+.icon-phone{
+    position: relative;
+}
+
+.container{
     font-size: 15px;
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    box-shadow: 0px 2px 3px #333333;
+}
+
+.ubicacion{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    height: 100px;
+}
+
+.icono-ubicacion{
+    display: flex;
+    width: 100%;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+.informacion-ubicacion{
+    display: inline;
+}
+
+.icon-location{
+    font-size: 40px;
+}
+
+.icono-horario{
+    display: flex;
+    width: 100%;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+.horario{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.icon-time{
+    font-size: 40px;
+}
+
+.informacion-horario{
+    display: inline;
+}
+
+.socios{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.icono-socio-ohaus{
+    width: 50%;
+    height: 50px;
+}
+
+.pregunta{
+    width: 100%;
+    height: 130px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+/*2196f3 - 00ff00*/
+.pregunta-span{
+    background: #2196f3;
+    transition: 1s;
+    transform: rotate(-10deg);
+    width: 400px;
+    font-size: 40px;
+    border-radius: 3%;
+    box-shadow: 0px 5px 3px #333333;
 }
 
 .mensaje{
-position: relative;
-color: white;
-font-size:  15px;
-top: 40px;
-left: center;
+    display: flex;
+    height: 50px;
+    width: 100%;
+    position: relative;
+    color: white;
+    font-size:  15px;
+    align-self: flex-end;
+    background: #000000;
+    align-items: center;
+    justify-content: center;
 }
+
 .mensaje1{
     position: relative;
     color: white;
     font-size:  25px;
-    top: -20px;
+    top: 5px;
+   justify-content: center;
+   width: 100%;
+}
+    
+.mensaje2{
+    position: relative;
+    color: rgb(247, 249, 255);
+    font-size:  30px;
+    top: 15px;
     left: center;
-    }
-    
-    .mensaje2{
-        position: relative;
-        color: rgb(247, 249, 255);
-        font-size:  30px;
-        top: 15px;
-        left: center;
-        font-weight: bold;
-        
-    
-        }
-
-footer  hr{
-     position: relative;
-     top: -20px;
-    }
-
-
-/*FOOTER PEY*/
-/*
-    
-footer{
-
-    width: 100%;
-    background: #202020;
-    color: white;   
-    
-}
-
-.container-footer-all{
-    width: 100%;
-    max-width: 1200px;
-    margin: auto;
-    padding: 40px;
-}
-
-.container-body{
-    display: flex;
-    justify-content: space-between;
-}
-
-.colum1{
-    max-width: 400px;
-}
-
-.colum1 h1{
-    font-size: 22px;
-}
-
-.colum1 p{
-    font-size: 14px;
-    color: #C7C7C7;
-    margin-top: 20px;
-}
-
-.colum2{
-    max-width: 400px;
-    
-}
-
-.colum2 h1{
-    font-size: 22px;
-}
-
-.row{
-    margin-top: 20px;
-    display: flex;
-}
-
-.row img{
-    width: 36px;
-    height: 36px;
-}
-
-.row label{
-    margin-top: 10px;
-    margin-left: 20px;
-    color: #C7C7C7;
-}
-
-.colum3{
-    max-width: 400px;
-}
-
-.colum3 h1{
-    font-size: 22px;
-}
-
-.row2{
-    margin-top: 20px;
-    display: flex;
-}
-
-.row2 img{
-    width: 36px;
-    height: 36px;
-}
-
-.row2 label{
-    margin-top: 10px;
-    margin-left: 20px;
-    max-width: 140px;
-}
-
-.container-footer{
-    width: 100%;  
-    background: #101010;
-}
-
-.footer{
-    max-width: 1200px;
-    margin: auto;
-    display: flex;
-    justify-content: space-between;  
-    padding: 20px;
-}
-
-.copyright{
-    color: #C7C7C7;
-}
-
-.copyright a{
-    text-decoration: none;
-    color: white;
     font-weight: bold;
 }
 
-.information a{
-    text-decoration: none;
-    color: #C7C7C7;
+footer  hr{
+    position: relative;
+    top: -20px;
 }
 
-
-@media screen and (max-width: 1100px){
-    
-    .container-body{
-        flex-wrap: wrap;
-    }
-    
-    .colum1{
-        max-width: 100%;
-    }
-    
-    .colum2,
-    .colum3{
-        margin-top: 40px;
+@media screen and (min-width:1025px){
+    .col-3{
+        flex-basis: calc(100%/3);
     }
 }
-*/
