--- a/Bayser-Portal/bayser diseño 2/fonts/style.css
+++ b/Bayser-Portal/bayser diseño 2/fonts/style.css
@@ -1,10 +1,10 @@
 @font-face {
-  font-family: 'iconos';
-  src:  url('iconos.eot?czvwxp');
-  src:  url('iconos.eot?czvwxp#iefix') format('embedded-opentype'),
-    url('iconos.ttf?czvwxp') format('truetype'),
-    url('iconos.woff?czvwxp') format('woff'),
-    url('iconos.svg?czvwxp#iconos') format('svg');
+  font-family: 'icomoon';
+  src:  url('icomoon.eot?jfz0fn');
+  src:  url('icomoon.eot?jfz0fn#iefix') format('embedded-opentype'),
+    url('icomoon.ttf?jfz0fn') format('truetype'),
+    url('icomoon.woff?jfz0fn') format('woff'),
+    url('icomoon.svg?jfz0fn#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: block;
@@ -12,7 +12,7 @@
 
 [class^="icon-"], [class*=" icon-"] {
   /* use !important to prevent issues with browser extensions that change fonts */
-  font-family: 'iconos' !important;
+  font-family: 'icomoon' !important;
   speak: none;
   font-style: normal;
   font-weight: normal;
@@ -25,15 +25,36 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-.icon-home3:before {
+.icon-radio-checked2:before {
+  content: "\e907";
+}
+.icon-circle-left:before {
+  content: "\e908";
+}
+.icon-circle-right:before {
+  content: "\e909";
+}
+.icon-radio-unchecked:before {
+  content: "\e90a";
+}
+.icon-time:before {
   content: "\e902";
 }
-.icon-mail4:before {
-  content: "\ea86";
+.icon-phone:before {
+  content: "\e903";
 }
-.icon-facebook2:before {
-  content: "\ea91";
+.icon-location:before {
+  content: "\e904";
+}
+.icon-facebook:before {
+  content: "\e905";
 }
 .icon-whatsapp:before {
-  content: "\ea93";
+  content: "\e906";
+}
+.icon-facebook1:before {
+  content: "\e900";
+}
+.icon-email:before {
+  content: "\e901";
 }
