--- a/Bayser-Portal/Instalaciones/instalacion.css
+++ b/Bayser-Portal/Instalaciones/instalacion.css
@@ -321,7 +321,7 @@ left: 481px;
 
     
     color:black;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family:'Calibri', Georgia, Times, serif;;
     font-size: 26px;
     font-weight: lighter;
     position: relative;
@@ -343,7 +343,7 @@ left: 481px;
 
     
     color:black;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Calibri', Georgia, Times, serif;;
     font-size: 26px;
     font-weight: lighter;
     position: relative;
