--- a/Bayser-Portal/bayser diseño 2/estilolanding.css
+++ b/Bayser-Portal/bayser diseño 2/estilolanding.css
@@ -134,7 +134,7 @@ header{
 
 nav{
     width: 100%;
-    background-color:transparent;
+    background-color:rgba(20, 19, 19, 0.68);
     /*background-color: rgba(20, 19, 19, 0.68);*/
      overflow: auto;
      margin-top: -30px;
