--- a/Bayser-Portal/bayser diseño 2/estilolanding.css
+++ b/Bayser-Portal/bayser diseño 2/estilolanding.css
@@ -166,7 +166,7 @@ header nav ul li a{
     padding: 17px 15px;
     text-decoration: none;
     text-align: center;
-    color: #333333;
+    color:white;
     /*color: whitesmoke;*/
     /* color: black; */
     transition: all 0.4s linear;
