--- a/Bayser-Portal/bayser diseño 2/estilolanding.css
+++ b/Bayser-Portal/bayser diseño 2/estilolanding.css
@@ -124,7 +124,7 @@ a:hover span:nth-child(4){
 }
 
 header{
-    background-image: url(img/form_fondo.jpg);
+    background-image: url(img/mainbayser6.jpg);
     height: 100vh;
     background-size: cover;
     background-position: center;
