--- a/Bayser-Portal/bayser diseño 2/estilolanding.css
+++ b/Bayser-Portal/bayser diseño 2/estilolanding.css
@@ -267,6 +267,31 @@ img#logo{
 
 
 }
+header .btn_hamburger{
+    display: none;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+   /* background-color: red;*/
+    width: 45px;
+    height: 45px;
+    position: absolute;
+    top: 30px;
+    right: 7px;
+    cursor: pointer;
+}
+
+header .btn_hamburger div{
+    width: 90%;
+    height: 7px;
+    border-radius: 3px;
+    background-color: white;
+}
+
+
+
+
+
 footer {
     position: relative;
     align-self: flex-end;
@@ -547,9 +572,177 @@ footer  hr{
     position: relative;
     top: -20px;
 }
+/*RESPONSIVE*/
+@media screen and (min-width:320px){
+    header nav ul li a{
+        width: 100vw;
+    }
+    .logo{
+        left: 35.5vw;
+    }
+
+    header .btn_hamburger{
+        display: flex;
+    }
+
+    header nav ul{
+        overflow: hidden;
+        width: 100vw;
+        transition: max-height 1s ease-in;    
+    }
+    
+    header nav ul.hidden{
+        max-height: 0vh;
+        transition: max-height 1s ease-in;
+    }   
+
+    header nav ul.hidden .btn_hamburger div:nth-child(1){
+        width: 60%;
+        transition: width 0.1s linear;
+    }
+
+    header nav ul.hidden .btn_hamburger div:nth-child(3){
+        width: 60%;
+        transition: width 0.1s linear;
+    }
+}
+
+
+@media screen and (min-width:481px){
+    header nav ul li a{
+        width: 100vw;
+    }
+
+    .logo{
+        left: 41vw;
+    }
+
+    header .btn_hamburger{
+        display: flex;
+    }
+
+    header nav ul{
+        overflow: hidden;
+        width: 100vw;
+        transition: max-height 1s ease-in;    
+    }
+    
+    header nav ul.hidden{
+        max-height: 0vh;
+        transition: max-height 1s ease-in;
+    }   
+
+    header nav ul.hidden .btn_hamburger div:nth-child(1){
+        width: 60%;
+        transition: width 0.1s linear;
+    }
+
+    header nav ul.hidden .btn_hamburger div:nth-child(3){
+        width: 60%;
+        transition: width 0.1s linear;
+    }
+}
+
+
+@media screen and (min-width:768px){
+    header nav ul li a{
+        width: 100vw;
+    }
+        .logo{
+            left: 43.5vw;
+        }
+    
+        header .btn_hamburger{
+            display: flex;
+            transition: width 0.5s ease-in;
+        }
+    
+        header nav ul{
+            overflow: hidden;
+            width: 100vw;
+            transition: max-height 1s ease-in;    
+        }
+   
+        header nav ul.hidden{
+            max-height: 0vh;
+            transition: max-height 1s ease-in;
+        }   
+    
+        header nav ul.hidden .btn_hamburger div:nth-child(1){
+            width: 60%;
+            transition: width 0.1s linear;
+        }
+    
+        header nav ul.hidden .btn_hamburger div:nth-child(3){
+            width: 60%;
+            transition: width 0.1s linear;
+        }
+    
+        
+    }
+
+
+
 
 @media screen and (min-width:1025px){
     .col-3{
         flex-basis: calc(100%/3);
     }
+
+    /*nav*/
+        
+    header nav ul li a{
+        width: 100%;
+    }
+
+    header .btn_hamburger{
+        display: none;
+        overflow: hidden;
+    }
+        .logo{
+            left: 10px;
+        }
+    
+        header nav ul{
+            overflow: visible;
+            width: 100vw;
+            transition: max-height 1s ease-in;    
+        }
+        ul li ul li {
+            float: left;
+            }
+            
+            
+            
+            ul li ul{
+                display: none;
+                position: relative;
+                width: 200px;
+                padding: 10px 15px;
+            
+            }
+            li:hover>ul{
+                display: block;
+            
+            }
+        header nav ul.hidden{
+            max-height: 100vh;
+            transition: max-height 1s ease-in;
+        }   
+    
+        header nav ul.hidden .btn_hamburger div:nth-child(1){
+            width: 60%;
+            transition: width 0.1s linear;
+        }
+    
+        header nav ul.hidden .btn_hamburger div:nth-child(3){
+            width: 60%;
+            transition: width 0.1s linear;
+        }
+    
+    
+    
+
+
+
 }
