--- a/Bayser-Portal/Mantenimiento/mante.css
+++ b/Bayser-Portal/Mantenimiento/mante.css
@@ -24,8 +24,7 @@ header{
 
 nav{
     width: 100%;
-    background-color:rgba(20, 19, 19, 0.68);
-     overflow: auto;
+    background-color: rgba(20, 19, 19, 0.68);
      margin-top: -30px;
      text-align: center;
      position: fixed;
@@ -55,6 +54,7 @@ header nav ul li a{
     padding: 17px 15px;
     text-decoration: none;
     text-align: center;
+    color: #333333;
     color: white;
     transition: all 0.4s linear;
     font-family: 'Baloo Thambi 2', cursive;
@@ -83,43 +83,65 @@ header nav ul li a:hover::before{
 }
 
 ul li ul li {
+
     float: left;
-}
+    }
     
-ul li ul{
-    display: none;
-    position: relative;
-    width: 200px;
-    padding: 10px 15px;    
-}
-
-li:hover>ul{
-    display: block;    
-}
-
+    
+    
+    ul li ul{
+        display: none;
+        position: relative;
+        width: 200px;
+        padding: 10px 15px;
+    
+    }
+    li:hover>ul{
+        display: block;
+    
+    }
 #body{
-    width: 100%;
-    height: 0px;
+	width: 100%;
+	height: 0px;
 }
-
 /*Icono de la empresa*/
 .logo{
     position: relative;
     margin-top: 29px;
     margin-bottom: -10px;
     width: 50px;
-    left: 10px;        
-}
-    
-.logo .imgnav{        
-    float: left;
-    left: 10px;
-    width:100px;
-    height: 100%;
-    top: 3px;
-    margin-bottom: 5px;
+    left: 10px; 
 }
 
+    .logo .imgnav{
+           
+           float: left;
+            left: 10px;
+            width:100px;
+            height: 100%;
+            top: 3px;
+            margin-bottom: 5px;
+    } 
+
+header .btn_hamburger{
+    display: none;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    width: 45px;
+    height: 45px;
+    position: absolute;
+    top: 30px;
+    right: 7px;
+    cursor: pointer;
+}
+
+header .btn_hamburger div{
+    width: 90%;
+    height: 7px;
+    border-radius: 3px;
+    background-color: white;
+}
 /*SLIDER*/
 
 
@@ -646,9 +668,177 @@ footer  hr{
     position: relative;
     top: -20px;
 }
+/*RESPONSIVE*/
+@media screen and (min-width:320px){
+    header nav ul li a{
+        width: 100vw;
+    }
+    .logo{
+        left: 35.5vw;
+    }
+
+    header .btn_hamburger{
+        display: flex;
+    }
+
+    header nav ul{
+        overflow: hidden;
+        width: 100vw;
+        transition: max-height 1s ease-in;    
+    }
+    
+    header nav ul.hidden{
+        max-height: 0vh;
+        transition: max-height 1s ease-in;
+    }   
+
+    header nav ul.hidden .btn_hamburger div:nth-child(1){
+        width: 60%;
+        transition: width 0.1s linear;
+    }
+
+    header nav ul.hidden .btn_hamburger div:nth-child(3){
+        width: 60%;
+        transition: width 0.1s linear;
+    }
+}
+
+
+@media screen and (min-width:481px){
+    header nav ul li a{
+        width: 100vw;
+    }
+
+    .logo{
+        left: 41vw;
+    }
+
+    header .btn_hamburger{
+        display: flex;
+    }
+
+    header nav ul{
+        overflow: hidden;
+        width: 100vw;
+        transition: max-height 1s ease-in;    
+    }
+    
+    header nav ul.hidden{
+        max-height: 0vh;
+        transition: max-height 1s ease-in;
+    }   
+
+    header nav ul.hidden .btn_hamburger div:nth-child(1){
+        width: 60%;
+        transition: width 0.1s linear;
+    }
+
+    header nav ul.hidden .btn_hamburger div:nth-child(3){
+        width: 60%;
+        transition: width 0.1s linear;
+    }
+}
+
+
+@media screen and (min-width:768px){
+    header nav ul li a{
+        width: 100vw;
+    }
+        .logo{
+            left: 43.5vw;
+        }
+    
+        header .btn_hamburger{
+            display: flex;
+            transition: width 0.5s ease-in;
+        }
+    
+        header nav ul{
+            overflow: hidden;
+            width: 100vw;
+            transition: max-height 1s ease-in;    
+        }
+   
+        header nav ul.hidden{
+            max-height: 0vh;
+            transition: max-height 1s ease-in;
+        }   
+    
+        header nav ul.hidden .btn_hamburger div:nth-child(1){
+            width: 60%;
+            transition: width 0.1s linear;
+        }
+    
+        header nav ul.hidden .btn_hamburger div:nth-child(3){
+            width: 60%;
+            transition: width 0.1s linear;
+        }
+    
+        
+    }
+
+
+
 
 @media screen and (min-width:1025px){
     .col-3{
         flex-basis: calc(100%/3);
     }
+
+    /*nav*/
+        
+    header nav ul li a{
+        width: 100%;
+    }
+
+    header .btn_hamburger{
+        display: none;
+        overflow: hidden;
+    }
+        .logo{
+            left: 10px;
+        }
+    
+        header nav ul{
+            overflow: visible;
+            width: 100vw;
+            transition: max-height 1s ease-in;    
+        }
+        ul li ul li {
+            float: left;
+            }
+            
+            
+            
+            ul li ul{
+                display: none;
+                position: relative;
+                width: 200px;
+                padding: 10px 15px;
+            
+            }
+            li:hover>ul{
+                display: block;
+            
+            }
+        header nav ul.hidden{
+            max-height: 100vh;
+            transition: max-height 1s ease-in;
+        }   
+    
+        header nav ul.hidden .btn_hamburger div:nth-child(1){
+            width: 60%;
+            transition: width 0.1s linear;
+        }
+    
+        header nav ul.hidden .btn_hamburger div:nth-child(3){
+            width: 60%;
+            transition: width 0.1s linear;
+        }
+    
+    
+    
+
+
+
 }
