--- a/Bayser-Portal/Formulario 2/formulario2.css
+++ b/Bayser-Portal/Formulario 2/formulario2.css
@@ -61,7 +61,7 @@ header nav ul li a{
     font-family: 'Baloo Thambi 2', cursive;
     position: relative;
     background: darkgreen(#2196f3,15);
-    text-transform: uppercase;
+    text-transform: initial;
 }
 
 header nav ul li a::before{
@@ -84,23 +84,20 @@ header nav ul li a:hover::before{
 }
 
 ul li ul li {
-
     float: left;
-    }
-    
-    
-    
-    ul li ul{
-        display: none;
-        position: relative;
-        width: 200px;
-        padding: 10px 15px;
-    
-    }
-    li:hover>ul{
-        display: block;
-    
-    }
+}
+        
+ul li ul{
+    display: none;
+    position: relative;
+    width: 200px;
+    padding: 10px 15px;
+}
+
+li:hover>ul{
+    display: block;
+}
+
 #body{
 	width: 100%;
 	height: 0px;
@@ -114,15 +111,14 @@ ul li ul li {
     left: 10px; 
 }
 
-    .logo .imgnav{
-           
-           float: left;
-            left: 10px;
-            width:100px;
-            height: 100%;
-            top: 3px;
-            margin-bottom: 5px;
-    } 
+.logo .imgnav{           
+    float: left;
+    left: 10px;
+    width:100px;
+    height: 100%;
+    top: 3px;
+    margin-bottom: 5px;
+} 
 
 header .btn_hamburger{
     display: none;
@@ -139,8 +135,8 @@ header .btn_hamburger{
 
 header .btn_hamburger div{
     width: 90%;
-    height: 7px;
-    border-radius: 3px;
+    height: 5px;
+    border-radius: 5px;
     background-color: white;
 }
 /*CUERPO*/
@@ -151,16 +147,17 @@ header .btn_hamburger div{
  input.error {
     outline-style: solid;
     outline-color: maroon;
-  }
+}
 
 input.error {
     outline-style: solid;
     outline-color: #2196f3;
-  }
-  .errorClass{
+}
+
+.errorClass{
     font-weight: 200;
     color:#2196f3;
-  }
+}
 
 .informacion .form .form-header .form-title{
     font-weight: normal;
@@ -192,9 +189,7 @@ input.error {
     padding: 5px 35px;
     /* margin-top: 30px; */
     padding-bottom: 30px;
-    border-radius: 3px;
-
-    
+    border-radius: 3px;    
 }
 
 .informacion .form .form-label{
@@ -251,10 +246,6 @@ input.error {
     cursor: pointer;
 }
 
-
-
-
-/*455961-30383f*/
 footer {
     position: relative;
     align-self: flex-end;
@@ -269,7 +260,7 @@ footer {
     display: flex;
     flex-wrap: wrap;
     flex-direction: row;
-  }
+}
 
 .redes-sociales{
     width: 100%;
@@ -290,7 +281,7 @@ footer {
 }
 
 .enlace-mail:hover>.span-email{
-   width: 233px;
+    width: 233px;
     transition: .3s;
     list-style: none;
     text-decoration: none;
@@ -313,8 +304,6 @@ footer {
     position: relative;
  }
 
-
-
 .enlace-facebook{
     display: flex;
     flex-wrap: wrap;
@@ -327,13 +316,13 @@ footer {
 
 .enlace-facebook:hover>.span-facebook{
     width: 180px;
-     transition: .3s;
-     list-style: none;
-     text-decoration: none;
-     color: white;
-     display: flex;
-     align-items: center;
-     position: relative;
+    transition: .3s;
+    list-style: none;
+    text-decoration: none;
+    color: white;
+    display: flex;
+    align-items: center;
+    position: relative;
  }
 
  .span-facebook{
@@ -489,7 +478,6 @@ footer {
     justify-content: center;
 }
 
-/*2196f3 - 00ff00*/
 .pregunta-span{
     background: #2196f3;
     transition: 1s;
@@ -518,8 +506,8 @@ footer {
     color: white;
     font-size:  25px;
     top: 5px;
-   justify-content: center;
-   width: 100%;
+    justify-content: center;
+    width: 100%;
 }
     
 .mensaje2{
@@ -538,175 +526,207 @@ footer  hr{
 
 /*RESPONSIVE*/
 @media screen and (min-width:320px){
-    header nav ul li a{
-        width: 100vw;
-    }
-    .logo{
-        left: 35.5vw;
-    }
-
-    header .btn_hamburger{
-        display: flex;
-    }
-
-    header nav ul{
-        overflow: hidden;
-        width: 100vw;
-        transition: max-height 1s ease-in;    
-    }
-    
-    header nav ul.hidden{
-        max-height: 0vh;
-        transition: max-height 1s ease-in;
-    }   
-
-    header nav ul.hidden .btn_hamburger div:nth-child(1){
-        width: 60%;
-        transition: width 0.1s linear;
-    }
-
-    header nav ul.hidden .btn_hamburger div:nth-child(3){
-        width: 60%;
-        transition: width 0.1s linear;
-    }
+.logo .imgnav{
+    width: 6em;
+    height: 3em;
 }
 
+header nav ul li a{
+    width: 100vw;
+    font-size: 1em;
+}
+
+.logo{
+    left: 35.5vw;
+}
+
+header .btn_hamburger{
+    display: flex;
+    width: 2em;
+    height: 2em;
+    position: absolute;
+    top: 40px;
+    right: 15px;
+}
+
+header nav ul{
+    overflow: hidden;
+    width: 100vw;
+    transition: max-height 1s ease-in;    
+}
+    
+header nav ul.hidden{
+    max-height: 0vh;
+    transition: max-height 1s ease-in;
+}   
+
+header nav ul.hidden .btn_hamburger div:nth-child(1){
+    width: 60%;
+    transition: width 0.1s linear;
+}
+
+header nav ul.hidden .btn_hamburger div:nth-child(3){
+    width: 60%;
+    transition: width 0.1s linear;
+}
+}
 
 @media screen and (min-width:481px){
-    header nav ul li a{
-        width: 100vw;
-    }
+.logo .imgnav{
+    width: 8em;
+    height: 5em;
+}
 
-    .logo{
-        left: 41vw;
-    }
+header nav ul li a{
+    width: 100vw;
+    font-size: 1.1em;
+}
 
-    header .btn_hamburger{
-        display: flex;
-    }
+.logo{
+    left: 38vw;
+}
 
-    header nav ul{
-        overflow: hidden;
-        width: 100vw;
-        transition: max-height 1s ease-in;    
-    }
+header .btn_hamburger{
+    display: flex;
+    width: 3em;
+    height: 3em;
+    position: absolute;
+    top: 50px;
+    right: 15px;
+}
+
+header nav ul{
+    overflow: hidden;
+    width: 100vw;
+    transition: max-height 1s ease-in;    
+}
     
-    header nav ul.hidden{
-        max-height: 0vh;
-        transition: max-height 1s ease-in;
-    }   
+header nav ul.hidden{
+    max-height: 0vh;
+    transition: max-height 1s ease-in;
+}   
 
-    header nav ul.hidden .btn_hamburger div:nth-child(1){
-        width: 60%;
-        transition: width 0.1s linear;
-    }
+header nav ul.hidden .btn_hamburger div:nth-child(1){
+    width: 60%;
+    transition: width 0.1s linear;
+}
 
-    header nav ul.hidden .btn_hamburger div:nth-child(3){
-        width: 60%;
-        transition: width 0.1s linear;
-    }
+header nav ul.hidden .btn_hamburger div:nth-child(3){
+    width: 60%;
+    transition: width 0.1s linear;
+}
 }
 
 
 @media screen and (min-width:768px){
-    header nav ul li a{
-        width: 100vw;
-    }
-        .logo{
-            left: 43.5vw;
-        }
+.logo .imgnav{
+    width: 8.5em;
+    height: 5em;
+}
+
+header nav ul li a{
+    width: 100vw;
+    font-size: 1.1em;
+}
+
+.logo{
+    left: 43.5vw;
+}
     
-        header .btn_hamburger{
-            display: flex;
-            transition: width 0.5s ease-in;
-        }
+header .btn_hamburger{
+    display: flex;
+    transition: width 0.5s ease-in;
+    width: 3em;
+    height: 3em;
+    position: absolute;
+    top: 50px;
+    right: 18px;
+}
     
-        header nav ul{
-            overflow: hidden;
-            width: 100vw;
-            transition: max-height 1s ease-in;    
-        }
+header nav ul{
+    overflow: hidden;
+    width: 100vw;
+    transition: max-height 1s ease-in;    
+}
    
-        header nav ul.hidden{
-            max-height: 0vh;
-            transition: max-height 1s ease-in;
-        }   
+header nav ul.hidden{
+    max-height: 0vh;
+    transition: max-height 1s ease-in;
+}   
     
-        header nav ul.hidden .btn_hamburger div:nth-child(1){
-            width: 60%;
-            transition: width 0.1s linear;
-        }
+header nav ul.hidden .btn_hamburger div:nth-child(1){
+    width: 60%;
+    transition: width 0.1s linear;
+}
     
-        header nav ul.hidden .btn_hamburger div:nth-child(3){
-            width: 60%;
-            transition: width 0.1s linear;
-        }
-    
-        
-    }
+header nav ul.hidden .btn_hamburger div:nth-child(3){
+    width: 60%;
+    transition: width 0.1s linear;
+}        
+}
 
 
 
 
 @media screen and (min-width:1025px){
-    .col-3{
-        flex-basis: calc(100%/3);
-    }
+.logo .imgnav{
+    width: 6em;
+    height: 2.9em;
+}
 
-    /*nav*/
+.col-3{
+    flex-basis: calc(100%/3);
+}
+
+/*nav*/
         
-    header nav ul li a{
-        width: 100%;
-    }
+header nav ul li a{
+    width: 100%;
+    font-size: 18px;
+}
 
-    header .btn_hamburger{
-        display: none;
-        overflow: hidden;
-    }
-        .logo{
-            left: 10px;
-        }
-    
-        header nav ul{
-            overflow: visible;
-            width: 100vw;
-            transition: max-height 1s ease-in;    
-        }
-        ul li ul li {
-            float: left;
-            }
-            
-            
-            
-            ul li ul{
-                display: none;
-                position: relative;
-                width: 200px;
-                padding: 10px 15px;
-            
-            }
-            li:hover>ul{
-                display: block;
-            
-            }
-        header nav ul.hidden{
-            max-height: 100vh;
-            transition: max-height 1s ease-in;
-        }   
-    
-        header nav ul.hidden .btn_hamburger div:nth-child(1){
-            width: 60%;
-            transition: width 0.1s linear;
-        }
-    
-        header nav ul.hidden .btn_hamburger div:nth-child(3){
-            width: 60%;
-            transition: width 0.1s linear;
-        }
-    
-    
-    
+header .btn_hamburger{
+    display: none;
+    overflow: hidden;
+}
 
+.logo{
+    left: 10px;
+}
+    
+header nav ul{
+    overflow: visible;
+    width: 100vw;
+    transition: max-height 1s ease-in;    
+}
 
+ul li ul li {
+    float: left;
+}
+                        
+ul li ul{
+    display: none;
+    position: relative;
+    width: 200px;
+    padding: 10px 15px;        
+}
 
+li:hover>ul{
+    display: block;        
+}
+
+header nav ul.hidden{
+    max-height: 100vh;
+    transition: max-height 1s ease-in;
+}   
+    
+header nav ul.hidden .btn_hamburger div:nth-child(1){
+    width: 60%;
+    transition: width 0.1s linear;
+}
+    
+header nav ul.hidden .btn_hamburger div:nth-child(3){
+    width: 60%;
+    transition: width 0.1s linear;
+}
 }
