--- a/Bayser-Portal/Formulario 1/formulario1.css
+++ b/Bayser-Portal/Formulario 1/formulario1.css
@@ -172,7 +172,7 @@ header .btn_hamburger div{
 
 .informacion .form .form-subtitle{
     font-weight: bold;
-    font-family: Roboto;
+    font-family: 'Open Sans', sans-serif;
     color:#276ff5;
     padding: 20px 0;   
 }
